feat(website): minor ui tweaks

--- a/packages/website/src/components/Apps.astro
+++ b/packages/website/src/components/Apps.astro
@@ -28,6 +28,7 @@ const apps = await getCollection('frameworks')
 		list-style: none;
 		margin-block: 56px 64px;
 		padding: 0;
+		user-select: none;
 
 		@media (width >= 460px) {
 			flex-direction: row;
