--- a/packages/website/src/components/Comparison.astro
+++ b/packages/website/src/components/Comparison.astro
@@ -83,6 +83,7 @@ const tests = await getCollection('tests')
 		transition-duration: 0.2s, 0.8s;
 		transition-property: filter, scale;
 		transition-timing-function: ease-out, var(--ease-spring-5);
+		user-select: none;
 	}
 
 	[data-item*="specs"] {
